--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ header {
     width: 100%;
     height: 600px;
     background-image: url(images/eggs.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .bannier {
@@ -25,17 +28,20 @@ header {
 }
 
 .bannier nav a {
+    display: block;
     color: rgba(255, 255, 255, 0.9);
     font-size: 14px;
     letter-spacing: 2px;
     font-weight: 400;
     text-decoration: none;
+    text-wrap: nowrap;
 }
 
 .bannier nav ul {
     list-style: none;
     display: flex;
     gap: 27px;
+    align-items: center;
 }
 
 .bannier nav ul li a {
@@ -52,7 +58,7 @@ header {
     border: 1px solid #C89446;
 }
 
-.bannier main {
+.bannier .mainly {
     position: absolute;
     right: 50%;
     top: 50%;
@@ -60,7 +66,7 @@ header {
     text-align: center;
 }
 
-.bannier main .welcome {
+.bannier .mainly .welcome {
     font-size:60px;
     font-family: "Pinyon Script", cursive;
     line-height: 50px;
@@ -69,7 +75,7 @@ header {
     margin-bottom: 6px;
 }
 
-.bannier main .name {
+.bannier .mainly .name {
     font-size: 70px;
     letter-spacing: 11px;
     color: #fff;
@@ -77,10 +83,139 @@ header {
     font-weight: 900;
 }
 
-.bannier main .description {
+.bannier .mainly .description {
     color: #fff;
     letter-spacing: 4px;
     text-transform: uppercase;
     font-size: 24px;
     font-weight: 300;
+}
+
+@media (max-width:800px) {
+    .bannier nav {
+        flex-direction: column;
+        padding: 10px 30px;
+        justify-content: center;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .bannier nav ul {
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .bannier nav ul li a.in-box {
+        border: none;
+        padding: 0;
+    }
+}
+
+/* partie principal */
+
+main {
+    width: 100%;
+}
+
+.container {
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 5px;
+}
+
+.container .article {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    position: relative;
+    z-index: 2;
+    margin-bottom: 70px;
+}
+
+.container .article .image-box {
+    width: 350px;
+    height: 425px;
+    background-image: url(images/burger.jpg);
+}
+
+.container .article .image-box::before {
+    content: "";
+    border: 2px solid #C89446;
+    width: 350px;
+    height: 425px;
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    z-index: -1;
+}
+
+.container .article .txt hr {
+    border: #C89446 solid 2px;
+    width: 24px;
+}
+
+.container .article .txt {
+    width: 450px;
+}
+
+.container .article .txt h1{
+    font-size:40px;
+    font-family: "Pinyon Script", cursive;
+    font-style: normal;
+    color: #C89446;
+    margin: 5px 0;
+}
+
+.container .article .txt h2 {
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: #383838;
+    margin-bottom: 10px;
+}
+
+.container .article .txt p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #6F6F6F;
+}
+
+.container .article .txt a {
+    text-decoration: none;
+    color: #C89446;
+    margin-top: 5px;
+}
+
+.container .right-content { 
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 0 auto;
+}
+
+.container .right-content .image-box {
+    background: url(images/crusted-chicken.jpg);
+}
+
+.container .right-content .image-box::before {
+    content: "";
+    border: 2px solid transparent;
+    width: 350px;
+    height: 425px;
+    position: absolute;
+    top: -20px;
+    left: -20px;
+}
+
+.container .right-content .image-box::after {
+    content: "";
+    border: 2px solid #C89446;
+    width: 350px;
+    height: 425px;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    z-index: -1;
 }
