--- a/style.css
+++ b/style.css
@@ -352,6 +352,7 @@ main {
     align-items: center;
     justify-content: space-between;
     position: relative;
+    margin-left: 50px;
 }
 
 .container .foot .txt p {
@@ -366,7 +367,7 @@ main {
 .container .foot .image-box {
     background: url(images/chef.png);
     width: 353px;
-    height: 611px;
+    height: 550px;
 }
 
 .container .foot .image-box::after {
@@ -377,4 +378,38 @@ main {
     position: absolute;
     bottom: 100px;
     right: 250px;
+}
+
+.reservation {
+    background: url(images/reservation.jpg);
+    width: 100%;
+    height: 600px;
+}
+
+.reservation .content {
+    background: linear-gradient(to bottom, #000, transparent);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.reservation .content .txt {
+    text-align: center;
+    margin-top: 97px;
+}
+
+.reservation .content .txt h2 {
+    color: #fff;
+}
+
+.sep {
+    position: relative;
+    left: 48%;
+}
+
+.reservation .content .txt p {
+    color: #6F6F6F;
+    font-size: 16px;
+    width: 640px;
 }
